--- a/war/Tagbuilder.css
+++ b/war/Tagbuilder.css
@@ -1,5 +1,4 @@
 /** Add css rules here for your application. */
-
 @import
 	url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik:wght@400;500;600;700;800;900&display=swap')
 	;
@@ -7,7 +6,6 @@
 @import
 	url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap')
 	;
-
 
 /** Example rules used by the template application (remove for your app) */
 body {
@@ -17,26 +15,26 @@ body {
 }
 
 .sendButton {
-  display: block;
-  font-size: 16pt;
+	display: block;
+	font-size: 16pt;
 }
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
-  width: 400px;
+	width: 400px;
 }
 
 .dialogVPanel {
-  margin: 5px;
+	margin: 5px;
 }
 
 .serverResponseLabelError {
-  color: red;
+	color: red;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
-  margin: 15px 6px 6px;
+	margin: 15px 6px 6px;
 }
 
 .navbar {
@@ -52,6 +50,11 @@ body {
 
 .bg-blue {
 	background-color: #5C9ED4;
+	font-weight: bold;
+}
+
+.noRowMargin td {
+	padding: 0;
 }
 
 .gwt-TreeItem {
@@ -66,3 +69,34 @@ body {
 	width: 100% !important;
 	color: white;
 }
+
+
+.table-padding td {
+	padding: 10px;
+	font-weight: bold;
+}
+
+
+.table-border {
+	border: 1px solid black;
+	border-bottom: none;
+}
+
+
+.selectedRow {
+	background-color: #999999;
+	font-weight: bold;
+	color: white;
+}
+
+.tableStyle td {
+	border-color: rgba(255, 255, 255, 1);
+	border-right-style: solid;
+	border-bottom-style: solid;
+	border-width: 1px;
+	
+	
+}
+
+
+
