--- a/war/Tagbuilder.css
+++ b/war/Tagbuilder.css
@@ -101,5 +101,31 @@ body {
     cursor: row-resize; /* Change cursor style to indicate draggability */
 }
 
+.removeBorder td {
+	border-right-style: none !important;
+	border-bottom-style: none !important;
+	padding: 0 !important;
+}
 
+.inputFieldStyle {
+	width: 100% !important;
+	padding: 8px;
+	color: black;
+	font-weight: bold;
+	outline: none;
+}
+
+input {
+	background: #FFF8C6;
+}
+
+select {
+	background: #D9D9D9;
+}
+
+.dialogBoxStyle {
+	background: white;
+	border-radius: 7px;
+	border: 1px solid black;
+}
 
