--- a/war/Tagbuilder.css
+++ b/war/Tagbuilder.css
@@ -66,7 +66,7 @@ body {
 	background-color: #5C9ED4 !important;
 	padding: 3px 5px;
 	border-radius: 5px;
-	width: 100% !important;
+	width: fit-content !important;
 	color: white;
 }
 
@@ -97,7 +97,7 @@ body {
 }
 
 .mySplitLayoutPanel .gwt-SplitLayoutPanel-HDragger {
-    background-color: rgba(0, 0, 0, 0.3); /* Set the color of the horizontal splitter */
+    background-color: rgba(0, 0, 0, 0.1); /* Set the color of the horizontal splitter */
     cursor: row-resize; /* Change cursor style to indicate draggability */
 }
 
@@ -128,4 +128,20 @@ select {
 	border-radius: 7px;
 	border: 1px solid black;
 }
+
+.taskLabel {
+	font-size: 0.86em;
+	white-space: nowrap !important;
+	cursor: pointer;
+}
+
+.surroundBorder {
+	border-bottom: 2px solid black;
+}
+
+.selectedLabel {
+	background: rgb(235, 239, 249);
+	/* width: fit-content; */
+}
+
 
